k8s-network-policy-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-app
spec:
  podSelector:
    matchLabels:
      app: maintenance-tracker-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: maintenance-tracker-frontend
      ports:
        - protocol: TCP
          port: 5000
