k8s-network-policy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: maintenance-tracker-app
        - podSelector:
            matchLabels:
              app: maintenance-tracker-worker
        - podSelector:
            matchLabels:
              app: maintenance-tracker-beat
      ports:
        - protocol: TCP
          port: 5432
